# Finja-AI-Ecosystem

./: .sonarcloud.properties  Dockerfile  LICENSE  README.md  ROADMAP.md  Readme-memory  TESTING.md  function-adaptive_memory_v4.1.py  memory-server.py  sonar-project.properties  test-requirements.txt
.claude/: settings.local.json
Finja-music/: readme.md
VPet-Simulator Mods/: readme.md
finja-Open-Web-UI/: readme.md
finja-agentic-code/: .env.example  .gitignore  README.md  docker-compose.yml  test_agentic_job.py  test_orchestrator.py  test_worker.py  tools_configure_vm.sh
finja-canvas/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai_client.py  canvas.csv  config.py  docker-compose.yml  entrypoint.sh  gen_canv.py  index.html  new_motif.py  painter.py  plan_drawing.py  render.py  requirements.txt  reset_canvas.py  server.py  shape_template.json  shape_template.py  what_to_draw.json
finja-chat/: .env  .env.example  .gitignore  bot_merged.html  command_bridge.py  commands.html  index_merged.html  readme.md  spotify_request_server_env.py  start_server_with_env.bat  start_static_server.bat  test_batch_files.py  test_command_bridge.py  test_spotify_request_server.py  test_windows_bat.py
finja-instagram/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  autopilot.py  cookies.json.example  docker-compose.yml  entrypoint.sh  instagram_api.py  requirements.txt  startbrowser.py  test_autopilot.py  test_docker_config.py  test_instagram_api.py  www.instagram.com_cookies.txt.example
finja-neural-network/: .dockerignore  .env.example  .gitignore  README.md  _paths.py  access_keys.example.json  altpersona.py  app_version.txt  dashboard_analytics.py  dashboard_models.py  dashboard_process.py  dashboard_runtime.py  (+8 more)
finja-neural-network/glorpo/glorpo-interp/: CMakeLists.txt  README.md  build.bat
finja-neural-network/glorpo/glorpo-interp/src/: ast.hpp  environment.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  token.hpp  value.hpp
finja-neural-network/glorpo/glorpo-native/: CMakeLists.txt  README.md  build.bat  gen_dict.py  glorpo.cpp  glorpo_dict.hpp  native_smoke.glp
(+397 files in other folders)
